--- a/挣客.md
+++ b/挣客.md
@@ -3,3 +3,11 @@
 - wxParse 插件 bug
 
 wxParse 的 html2json.js 文件里面有一个 `console.dir`,oppo 手机和华为手机不支持 `console.dir`,要改成 `console.log`
+
+- data- 不支持大写
+
+例如你再 view 组件里面定义 `data-curIndex`,通过绑定时间获取 dataset 只能获取 `curindex`
+
+- IOS 滑动不流畅
+
+在 app.wxss page 里面添加 `-webkit-overflow-scrolling:touch;0` 或者把内容放在 `<scroll-view>` 组件里面
