--- a/菊皇茶.md
+++ b/菊皇茶.md
@@ -8,3 +8,7 @@
     util.setCookie("play_times", 1, 30);
     window.play_times=util.getCookie("play_times");
     ```
+
+- webpack4 压缩 js 后，函数变量名变化，导致 weixin.js 不能引入压缩后 js 里面的代码
+
+    暂时没有想到好的解决方法
