--- a/大连摄影.md
+++ b/大连摄影.md
@@ -6,6 +6,18 @@
      var root="__ROOT__";
      <div><img style="margin:.6rem auto 0;" src="${root}/Public/Mobile/images/empty.png"></div>
     ```
+- 插入 尾部
+
+    ```js
+        <include file="Public:footer" />
+    ```
+
+- 数据为空
+
+    ```html
+    <div style="font-size:.28rem;text-align:center; padding-top:.3rem;">数据为空~</div>
+    <div><img style="margin:.6rem auto 0;" src="__ROOT__/Public/Mobile/images/empty.png"></div>
+    ```
 
 - 监听 select 值变化
 
@@ -24,3 +36,8 @@
             ipt.value=""
         }
     ```
+
+
+- 用户上传的图片再转成 canvas 后，元信息丢失
+
+    exif.js 获取不到元信息，暂时没有解决方式
