--- a/加减信息公司/即时通讯.md
+++ b/加减信息公司/即时通讯.md
@@ -1,13 +1,39 @@
 # 即时通讯
 
-- input 不能设置 `height`
+1. input 不能设置 `height`
 
     改为设置 `min-height`
 
-- 微信小程序处理软键盘弹出布局上移遮住输入框的解决方法
+1. 微信小程序处理软键盘弹出布局上移遮住输入框的解决方法
 
     设置 `cursor-spacing=20` 属性
 
-- 键盘弹起时，禁止自动上推页面
+1. 键盘弹起时，禁止自动上推页面
 
     `adjust-position={{false}}`
+
+1. input 组件设置光标到最后
+
+    ```js
+    <input bindinput="handleGetIptVal" cursor="{{cursorPos}}">
+
+    handleGetIptVal(e){
+        this.setData({
+        cursorPos:e.detail.cursor
+        })
+    }
+    ```
+    添加颜文字的时候，让 `this.data.cursorPos++`
+
+1. openSetting 只能通过 button 组件调请
+
+    `<button open-type="openSetting">`
+
+1. button 组件去边框
+  
+    ```css
+        button:after{
+            border:none;
+        }
+    ```
+
